tests/baselines/reference/asyncSetter.errors.txt
tests/cases/conformance/async/downlevel/asyncSetter.ts(7,3): error TS1042: 'async' modifier cannot be used on a 'set' accessor.


==== tests/cases/conformance/async/downlevel/asyncSetter.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async set foo(value) {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used on a 'set' accessor.
      }
    }